--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-randomfile2*
+randomfile*
+src/fileconduit
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,go
