--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - "*"
 
 env:
-  REGISTRY_IMAGE: ghcr.io/proofrock/fileconduit
+  REGISTRY_IMAGE: ghcr.io/proofrock/fileway
 
 jobs:
   release:
@@ -32,8 +32,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: fcuploader.py
-          asset_name: fcuploader.py
+          asset_path: fileway_ul.py
+          asset_name: fileway_ul.py
           asset_content_type: text/x-python
 
   # https://docs.docker.com/build/ci/github-actions/multi-platform/
@@ -54,7 +54,7 @@ jobs:
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Modify fileconduit
+      - name: Modify fileway
         run: sed -i 's/v0\.0\.0/${{ github.ref_name }}/g' main.go
         working-directory: src/
       - name: Docker meta
