--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 randomfile*
-src/fileconduit
+src/fileway
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,go
