--- a/Dockerfile.revproxy
+++ b/Dockerfile.revproxy
@@ -3,6 +3,9 @@ FROM golang:latest AS build
 WORKDIR /go/src/app
 COPY src/ .
 
+RUN curl -O https://raw.githubusercontent.com/monperrus/crawler-user-agents/refs/heads/master/crawler-user-agents.json
+RUN mv crawler-user-agents.json blacklist/
+
 RUN CGO_ENABLED=0  go build -trimpath -a -o fileway -tags="netgo osusergo" -ldflags='-w -extldflags "-static"'
 
 # Now copy it into a caddy image.
