--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 env:
   REGISTRY_IMAGE: ghcr.io/proofrock/fileway
   REGISTRY_IMAGE_CADDY: ghcr.io/proofrock/fileway-caddy
+  TIMESTAMP: 
 
 jobs:
   release:
@@ -56,9 +57,6 @@ jobs:
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Modify version (main go file)
-        run: sed -i 's/v0\.0\.0/${{ github.ref_name }}/g' main.go
-        working-directory: src/
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -72,12 +70,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.TOKEN }}
+      - name: Get last tag info
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+        id: get_tag
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: "./Dockerfile.simple"
+          build-args: |
+            VERSION=${{ github.ref_name }}
+            SOURCE_DATE_EPOCH=${{ steps.get_tag.outputs.timestamp }}
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
@@ -144,9 +148,6 @@ jobs:
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Modify version (main go file)
-        run: sed -i 's/v0\.0\.0/${{ github.ref_name }}/g' main.go
-        working-directory: src/
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -160,12 +161,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.TOKEN }}
+      - name: Get last tag info
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+        id: get_tag
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: "./Dockerfile.revproxy"
+          build-args: |
+            VERSION=${{ github.ref_name }}
+            SOURCE_DATE_EPOCH=${{ steps.get_tag.outputs.timestamp }}
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE_CADDY }},push-by-digest=true,name-canonical=true,push=true
