#6 Configure the internal buffer and other params

--- a/Dockerfile.revproxy
+++ b/Dockerfile.revproxy
@@ -16,6 +16,9 @@ FROM caddy:latest
 COPY --from=build /go/src/app/fileway /
 
 ENV FILEWAY_SECRET_HASHES=""
+ENV RANDOM_IDS_LENGTH="33"
+ENV CHUNK_SIZE_KB="4096"
+ENV BUFFER_QUEUE_SIZE="4"
 ENV BASE_ADDRESS=""
 
 EXPOSE 80 443
