--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -17,6 +17,9 @@ FROM gcr.io/distroless/static-debian12
 COPY --from=build /go/src/app/fileway /
 
 ENV FILEWAY_SECRET_HASHES=""
+ENV RANDOM_IDS_LENGTH="33"
+ENV CHUNK_SIZE_KB="4096"
+ENV BUFFER_QUEUE_SIZE="4"
 
 EXPOSE 8080
 
