--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 randomfile*
 fileway
-src/fileway
+bin/
+test/*
+!test/test.sh
+src/reproducible_build.sh
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,go
